# ProyectoPythonDesktop

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
docs/: README.md
src/: main.py
tools/: Estructura_Linux.py  Estructura_Win.py
