[tool.poetry]
name = "proyectopythondesktop"
version = "1.0.0"
description = "Aplicación de escritorio en Python con PySide6"
authors = ["DeiCode <shgcifrado@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyside6 = "^6.5"
python-dotenv = "^1.0.0"  # Manejo de variables de entorno
pytest = "^7.0"  # Framework de testing
pytest-qt = "^4.0.2"  # Testing para aplicaciones Qt
black = "^22.3"  # Formateador de código
flake8 = "^5.0"  # Linter para código Python

[tool.poetry.dev-dependencies]
mypy = "^0.950"  # Tipado estático para Python
coverage = "^6.3"  # Análisis de cobertura de pruebas

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
